--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,17 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'javax.validation:validation-api:2.0.1.Final'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.6.1'
+    implementation 'com.mercateo.spring:spring-security-jwt:2.1.1'
+    implementation 'org.soulwing.jwt:jwt-api:1.7.1'
+	implementation 'com.pauldijou:jwt-core-impl_2.11:1.1.0'
+	implementation 'org.webjars.npm:jsonwebtoken:8.5.1'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    implementation 'org.springframework.security:spring-security-parent:3.0.8.RELEASE'
+    implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
+    implementation 'com.h2database:h2:2.0.204'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
