--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,9 @@ dependencies {
     implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
     implementation 'com.h2database:h2:2.0.204'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.2'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.cloud:spring-cloud-aws-jdbc:2.2.6.RELEASE'
+	implementation 'mysql:mysql-connector-java:8.0.25'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
